# raw-image-viewer

./: BUILD.md  CMakeLists.txt  README.md
.github/workflows/: build.yml  cmake-single-platform.yml
src/: main.cpp  rawviewer.py
